--- a/index.html
+++ b/index.html
@@ -4,28 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Notes</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/contrib/auto-render.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
     <button id="toggle-sidebar">☰</button>
     <div id="sidebar">
         <div id="sidebar-content">
-            <h2>My Notes</h2>
             <nav>
-                <ul><li><a href="#" data-path="notes/note-1.md">note-1</a></li></ul>
+                <ul><li><a href="#" data-path="note-1.md">note-1</a></li>
+</ul>
             </nav>
         </div>
     </div>
     <div id="main-content">
         <div id="note-content"></div>
     </div>
-    <script>
-        console.log('Sidebar content:', document.getElementById('sidebar-content').innerHTML);
-    </script>
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
