--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/contrib/auto-render.min.js"></script>
 </head>
 <body>
-    <button id="toggle-sidebar">☰</button>
+    <header>
+        <button id="toggle-sidebar">☰</button>
+        <h1 id="note-title">Notes</h1>
+    </header>
     <div id="sidebar">
         <div id="sidebar-content">
             <nav>
-                <ul><li><a href="#" data-path="note-1.md">note-1</a></li>
+                <ul><li><a href="#" data-path="note-1.md">Note-1</a></li>
 </ul>
             </nav>
         </div>
