--- a/template.html
+++ b/template.html
@@ -11,7 +11,10 @@
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/contrib/auto-render.min.js"></script>
 </head>
 <body>
-    <button id="toggle-sidebar">☰</button>
+    <header>
+        <button id="toggle-sidebar">☰</button>
+        <h1 id="note-title">{note_title}</h1>
+    </header>
     <div id="sidebar">
         <div id="sidebar-content">
             <nav>
@@ -20,7 +23,7 @@
         </div>
     </div>
     <div id="main-content">
-        <div id="note-content"></div>
+        <div id="note-content">{note_content}</div>
     </div>
     <script src="/js/script.js"></script>
 </body>
