--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div id="main-content">
-        <div id="note-content"></div>
+        <div id="note-content"><p>This is the landing page for my personal notes collection. See if it works.</p></div>
     </div>
     <script src="/js/script.js"></script>
 </body>
