--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
         <button id="toggle-sidebar">☰</button>
         <h1 id="note-title">Notes</h1>
+        <a href="index.html" id="home-button" title="Home">🏠</a>
     </header>
     <div id="sidebar">
         <div id="sidebar-content">
