--- a/notes/note-1.html
+++ b/notes/note-1.html
@@ -25,8 +25,7 @@
         </div>
     </div>
     <div id="main-content">
-        <div id="note-content"><h1>Note-1</h1>
-<p>Find the points on the ellipse $4x^2 + y^2 = 4$ that are farthest away from the point $(1, 0)$.</p>
+        <div id="note-content"><p>Find the points on the ellipse $4x^2 + y^2 = 4$ that are farthest away from the point $(1, 0)$.</p>
 <h2>Solution</h2>
 <p>Let's approach this step-by-step:</p>
 <p>1) First, we need to set up the distance formula between a general point $(x, y)$ on the ellipse and the given point $(1, 0)$:</p>
