--- a/notes/note-2.html
+++ b/notes/note-2.html
@@ -25,8 +25,7 @@
         </div>
     </div>
     <div id="main-content">
-        <div id="note-content"><h1>Note-2</h1>
-<p>I gave the following prompt to sonnet-3.5:</p>
+        <div id="note-content"><p>I gave the following prompt to sonnet-3.5:</p>
 <blockquote>
 <p>Coding -&gt; Prompt + coding -&gt; Prompting</p>
 </blockquote>
