--- a/notes/note-1.html
+++ b/notes/note-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Notes</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"></script>
@@ -14,13 +14,13 @@
     <header>
         <button id="toggle-sidebar">☰</button>
         <h1 id="note-title">Note-1</h1>
-        <a href="index.html" id="home-button" title="Home">🏠</a>
+        <a href="/" id="home-button" title="Home">🏠</a>
     </header>
     <div id="sidebar">
         <div id="sidebar-content">
             <nav>
-                <ul><li><a href="note-2.html">Note-2</a></li>
-<li><a href="note-1.html">Note-1</a></li></ul>
+                <ul><li><a href="/notes/note-2.html">Note-2</a></li>
+<li><a href="/notes/note-1.html">Note-1</a></li></ul>
             </nav>
         </div>
     </div>
@@ -52,8 +52,8 @@
    $y^2 = \frac{32}{9}$
    $y = \pm \frac{4\sqrt{2}}{3}$</p>
 <p>6) Therefore, the farthest points are $(-\frac{1}{3}, \frac{4\sqrt{2}}{3})$ and $(-\frac{1}{3}, -\frac{4\sqrt{2}}{3})$.</p>
-<p><img src="ellipse_problem.png" alt="Ellipse Problem Visualization" style="width:100%;"/></p></div>
+<p><img src="/notes/ellipse_problem.png" alt="Ellipse Problem Visualization" style="width:100%;"/></p></div>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
