--- a/notes/note-2.html
+++ b/notes/note-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Notes</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"></script>
@@ -14,13 +14,13 @@
     <header>
         <button id="toggle-sidebar">☰</button>
         <h1 id="note-title">Note-2</h1>
-        <a href="index.html" id="home-button" title="Home">🏠</a>
+        <a href="/" id="home-button" title="Home">🏠</a>
     </header>
     <div id="sidebar">
         <div id="sidebar-content">
             <nav>
-                <ul><li><a href="note-2.html">Note-2</a></li>
-<li><a href="note-1.html">Note-1</a></li></ul>
+                <ul><li><a href="/notes/note-2.html">Note-2</a></li>
+<li><a href="/notes/note-1.html">Note-1</a></li></ul>
             </nav>
         </div>
     </div>
@@ -64,6 +64,6 @@
 <p>However, it's important to note that this transition will not happen overnight, and traditional coding skills will remain valuable for the foreseeable future. The most effective developers will likely be those who can seamlessly blend traditional coding expertise with the ability to leverage AI-assisted tools through effective prompting.</p>
 <p>As we stand at the cusp of this transformation, it's an exciting time to be involved in the world of programming. The journey from code to prompting is not just changing how we create software, but also redefining what it means to be a programmer in the age of artificial intelligence.</p></div>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
